second commit of documents

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <!-- adding the head text-->
     <h1>Odin Recipes</h1>
     <!-- adding the list to recipe-->
-    <a href="dorowet.html">Doro Wet</a>
+    <ul>
+        <li><a href="recipes/dorowet.html">Doro Wet</a></li>
+        <li><a href="recipes/shiro.html">Shiro Wet</a></li>
+        <li><a href="recipes/tibs.html">Tibs Wet</a></li>
+    </ul>
 </body>
 </html>
