--- a/recipes/tibs.html
+++ b/recipes/tibs.html
@@ -39,6 +39,6 @@
            <li>Serve immediately with **injera**.</li>
         </ol>
     <!-- link to Home page-->
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
