--- a/recipes/dorowet.html
+++ b/recipes/dorowet.html
@@ -34,6 +34,6 @@
             <li>Serve hot with injera.</li>
         </ol>
     <!-- link to Home page-->
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
